--- a/stochastic_discount_factor.ipynb
+++ b/stochastic_discount_factor.ipynb
@@ -1939,7 +1939,7 @@
    "metadata": {},
    "source": [
     "### Tabela 6.2 - The equity premium puzzle\n",
-    "Nesta tabela serão computados o arithmetic average excess stock return $aer_e$, o desvio padrão do excess log stock return $\\sigma (er_e)$, o lower bound de $\\sigma(\\ln(M_{t+1,t}))$ denotado por $\\sigma(m)$, desvio padrão da taxa de crescimento do consumo $\\sigma(\\Delta c)$ que foi computada na Tabela 6.1, o coefiente correlação entre as séries de excess log stock return e taxa de crescimento do consumo $\\rho(er_e,\\Delta c)$. Por fim, são apresentados por dois métodos diferentes a estimação do coeficiente de aversão relativa ao risco $RRA(1)$ e $RRA(2)$, respectivamente."
+    "Nesta tabela serão computados o arithmetic average excess stock return $aer_e$, o desvio padrão do excesso de retorno das ações em log $\\sigma (er_e)$, o limite inferior de $\\sigma(\\ln(M_{t+1,t}))$ denotado por $\\sigma(m)$, desvio padrão da taxa de crescimento do consumo $\\sigma(\\Delta c)$ que foi computada na Tabela 6.1, o coefiente correlação entre as séries de excesso de retorno das ações e taxa de crescimento do consumo $\\rho(er_e,\\Delta c)$. Por fim, são apresentados por dois métodos diferentes a estimação do coeficiente de aversão relativa ao risco $RRA(1)$ e $RRA(2)$ (Relative Risk Aversion), respectivamente."
    ]
   },
   {
